Fix scrollbar in chatbox

--- a/src/components/ChatBox.scss
+++ b/src/components/ChatBox.scss
@@ -16,11 +16,6 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-
-    //& p:first-child {
-    //  flex: 1 1 auto;
-    //}
 
     & .chat-box__message__player, .chat-box__message__system {
       word-wrap: anywhere;
